// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders correctly mandatory props only 1`] = `
<label
  className="root   rootLayoutVertical  rootSizeMedium  rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label "
    id="test__labelText"
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={false}
        id="test"
        onChange={null}
        required={false}
      >
        <option
          id="test__item__ch1"
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
        <option
          id="test__item__ch2"
          key="ch2"
          value="ch2"
        >
          choice 2
        </option>
      </select>
      <div
        className="caret"
      >
        <span
          className="caretIcon"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly only one option 1`] = `
<label
  className="root   rootLayoutVertical  rootSizeMedium  rootVariantOutline"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label "
    id="test__labelText"
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={false}
        id="test"
        onChange={null}
        required={false}
      >
        <option
          id="test__item__ch1"
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
      </select>
      <div
        className="caret"
      >
        <span
          className="caretIcon"
        />
      </div>
    </div>
  </div>
</label>
`;

exports[`rendering renders correctly with all props 1`] = `
<label
  className="root isRootFullWidth isRootInFormLayout rootLayoutHorizontal isRootRequired rootSizeLarge isRootStateInvalid rootVariantFilled"
  htmlFor="test"
  id="test__label"
>
  <div
    className="label isLabelHidden"
    id="test__labelText"
  >
    label
  </div>
  <div
    className="field"
  >
    <div
      className="inputContainer"
    >
      <select
        className="input"
        disabled={true}
        id="test"
        onChange={null}
        required={true}
        value="ch1"
      >
        <option
          id="test__item__ch1"
          key="ch1"
          value="ch1"
        >
          choice 1
        </option>
        <option
          disabled={true}
          id="test__item__ch2"
          key="ch2"
          value="ch2"
        >
          choice 2
        </option>
      </select>
      <div
        className="caret"
      >
        <span
          className="caretIcon"
        />
      </div>
      <div
        className="bottomLine"
      />
    </div>
    <div
      className="helpText"
      id="test__helpText"
    >
      some help
    </div>
  </div>
</label>
`;
